Closed
Bug 267601
Opened 21 years ago
Closed 21 years ago
wrong icon displayed for rss posts when "grouped by sort" is selected
Categories
(Thunderbird :: Mail Window Front End, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
Thunderbird1.0
People
(Reporter: bugzilla.mozilla.org, Assigned: mscott)
Details
(Keywords: fixed-aviary1.0)
Attachments
(3 files, 2 obsolete files)
|
1.65 KB,
image/png
|
Details | |
|
2.69 KB,
image/png
|
Details | |
|
1.27 KB,
patch
|
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.3) Gecko/20041026 Firefox/1.0RC1
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.3) Gecko/20041026 Firefox/1.0RC1
When viewing a folder of RSS posts and NOT grouping the messages by the sort
criteria there is a post-like icon next to the subject of each post that looks
like a piece of paper pinned up. When the new "Group By Sort" feature is
selected either from the View > Sort by menu or with the accesskey G the icon
displayed next to the subject of each post is the envelope icon used for mail items.
Reproducible: Always
Steps to Reproduce:
1. View an RSS feed's folder.
2. Press "G" or select from the View menu: Sort by > Grouped By Sort
Actual Results:
Messages are now shown with the mail icon next to the subject, not the post icon.
Expected Results:
Messages should still be shown with the post icon.
| Reporter | ||
Comment 1•21 years ago
|
||
| Reporter | ||
Comment 2•21 years ago
|
||
Seeing this in the 0.9 release (20041103) -- Fresh install by installer, new
profile. I first noticed this on a different machine with some of the first
nightlies (as .zip files) that included the message grouping feature.
| Assignee | ||
Updated•21 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Target Milestone: --- → Thunderbird1.0
| Assignee | ||
Comment 3•21 years ago
|
||
| Assignee | ||
Comment 4•21 years ago
|
||
Comment on attachment 164610 [details] [diff] [review]
the fix
David,
I noticed a lot of stuff in nsMsgDBView::Open besides just setting the message
type atom that looked like code we'd want called when opening a grouped view.
If you see something in nsMsgDBView::Open that we don't want getting called
for a grouped view, then I can break out the stuff we do want in a separate
method.
Also, should we be calling through the grouped view's parent class
(nsMsgSearchDBView) Open method and let that call nsMsgDBView::Open instead?
Attachment #164610 -
Flags: superreview?(bienvenu)
Comment 5•21 years ago
|
||
Comment on attachment 164610 [details] [diff] [review]
the fix
if you do this, I don't think you need stuff up to PersistFolderInfo
either...since it's in nsMsgDBView::Open.
the grouped view's parent is nsMsgThreadedDBView, and we definitely don't want
to call that.
| Assignee | ||
Comment 6•21 years ago
|
||
Comment on attachment 164610 [details] [diff] [review]
the fix
right you are
Attachment #164610 -
Flags: superreview?(bienvenu) → superreview-
| Assignee | ||
Comment 7•21 years ago
|
||
Attachment #164610 -
Attachment is obsolete: true
| Assignee | ||
Updated•21 years ago
|
Attachment #164616 -
Flags: superreview?(bienvenu)
| Assignee | ||
Comment 8•21 years ago
|
||
| Assignee | ||
Updated•21 years ago
|
Attachment #164616 -
Attachment is obsolete: true
| Assignee | ||
Updated•21 years ago
|
Attachment #164616 -
Flags: superreview?(bienvenu) → superreview-
| Assignee | ||
Updated•21 years ago
|
Attachment #164618 -
Flags: superreview?(bienvenu)
Comment 9•21 years ago
|
||
Comment on attachment 164618 [details] [diff] [review]
3rd time is a charm
sorry I wasn't clearer last time...
Attachment #164618 -
Flags: superreview?(bienvenu) → superreview+
| Assignee | ||
Comment 10•21 years ago
|
||
fixed branch and trunk
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Keywords: fixed-aviary1.0
Comment 11•21 years ago
|
||
vrfy'd fixed with 2004120106-0.9 on linux fc2. (n/a on mac, btw, since that
theme doesn't have icons for messages in the thread pane.)
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•