Bug #267601 --> wrong icon displayed for rss posts when "grouped by sort" is selected Call nsMsgDBView::Open from our grouped view to make sure everything gets initialized properly.

sr=bienvenu